[package]
name = "jiglagain"
version = "0.1.0"
authors = ["Ed Cashin <ed.cashin@acm.org>"]
license = "BSD-3-Clause"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
lv2 = { git = "https://github.com/RustAudio/rust-lv2.git" }
lv2-core = { git = "https://github.com/RustAudio/rust-lv2.git" }
num = "0.4.0"
rand = "0.8.4"
urid = "0.1.0"
